[package]
name = "connected-components"
version = "0.1.0"
edition = "2021"
default-run = "connected-components"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12.2"
glutin = "0.28"
custos = { path = "../custos", default-features=false, features=["macro", "cuda", "static-api", "lazy"] }
nvjpeg-sys = { path = "../nvjpeg-rs/nvjpeg-sys" }
cuda-driver-sys = "0.3.0"
clap = { version = "4.3", features = ["derive"] }
